--- a/shop.css
+++ b/shop.css
@@ -25,45 +25,65 @@ body {
 
 /* Header Section */
 
-header nav {
-  font-family: "Inter", sans-serif;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+header {
   padding-top: 38px;
-}
-
-nav ul {
+  padding-bottom: 30px;
   display: flex;
-  list-style: none;
+  align-items: center;
+  justify-content: space-between;
 }
 
-nav ul li {
-  margin: 0 8px;
+.search-bar {
+  flex: 1;
+  margin: 0 57px;
+  position: relative;
 }
 
-nav ul li a {
-  font-size: 28px;
-  font-weight: 400;
-  color: var(--green-color);
-  text-decoration: none;
-  padding: 18px 62px;
+.search-bar input[type="text"] {
+  height: 76px;
+  width: 516px;
+  padding: 8px;
+  border: none;
   border-radius: 10px;
-  border: 1px solid var(--green-color);
-}
-nav ul li a.btn-dark {
-  color: var(--light-color);
-  background-color: var(--green-color);
+  outline: none;
 }
 
-nav ul li a.btn-dark:hover {
-  background-color: var(--light-green-color);
-  transition: all 400ms;
+.search-icon {
+    width: 68px;
+    height: 76px;
+    background-color: var(--green-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+border-radius: 0px 10px 10px 0px;
 }
+
+.links {
+  display: flex;
+  align-items: center;
+}
+
+.links a {
+  color: var(--dark-green-color);
+  text-decoration: none;
+  margin: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.cart-icon {
+  font-size: 20px;
+  margin: 5px;
+}
+
 
 /* main section */
 
- main {
+main {
     margin-left: auto;
     margin-right: auto;
  }
