--- a/src/css/input_details.css
+++ b/src/css/input_details.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
-
+@import url('/src/css/header_footer.css');
 html {
   scroll-behavior: smooth;
 }
@@ -13,8 +13,6 @@ html {
 
 body {
   background-color: #D9D9D9;
-  width: 1440px;
-  height: 1677px;
   flex-shrink: 0;
 }
 
@@ -28,6 +26,9 @@ main {
   line-height: normal;
   border-radius: 10px;
   background: #EAEAEA;
+}
+header{
+  gap: 161px;
 }
 
 .donate {
@@ -159,4 +160,28 @@ main {
   text-align: center;
 }
 
-/* media responsiveness */
+/* Media Queries for Responsiveness */
+
+@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+  main {
+    margin: 30px 70px;
+  }
+  header {
+    padding-left: 46px;
+    padding-right: 46px;
+    gap: 50px;
+        box-shadow: none;
+      }
+}
+
+@media screen and (max-width: 480px), screen and (max-width: 600px){
+  main {
+    margin: 50px 70px;
+  }
+  header {
+    padding-left: 36px;
+    padding-right: 36px;
+        box-shadow: none;
+        gap: 50px;
+      }
+}
