--- a/src/css/product_page.css
+++ b/src/css/product_page.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
-
+@import url('/src/css/header_footer.css');
 html {
     scroll-behavior: smooth;
 }
@@ -13,9 +13,8 @@ html {
 
 body {
     background-color: #D9D9D9;
-    width: 1440px;
-    height: 3226px;
 }
+
 
 main {
     display: grid;
@@ -339,4 +338,32 @@ section {
     font-style: normal;
     font-weight: 400;
     line-height: 150%;
+}
+
+/* Media Queries for Responsiveness */
+
+@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+    main {
+        margin: 30px 5px;
+            padding: 0px;
+    }
+}
+
+@media screen and (max-width: 480px), screen and (max-width: 600px){
+    main {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 34px;
+        margin: 5px;
+    }
+
+    .product-card {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 12px;
+        justify-items: center;
+    }
+
+    section{
+        justify-items: center;
+    }
 }
