--- a/src/css/product_upload.css
+++ b/src/css/product_upload.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
-
+@import url('/src/css/header_footer.css');
 html {
     scroll-behavior: smooth;
 }
@@ -12,11 +12,15 @@ html {
 }
 
 body {
-    width: 1440px;
-    height: 1847px;
     background: #D9D9D9;
+    width: 100%;
 
 }
+
+header {
+    padding-left: 149px;
+    padding-right: 149px;
+  }
 
 main {
     display: grid;
@@ -187,3 +191,45 @@ section {
     font-size: 20px;
     font-weight: 600;
 }
+
+/* Media Queries for Responsiveness */
+
+@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+    main {
+        margin: 30px 0px;
+            padding: 0px;
+    }
+    header {
+        box-shadow: none;
+        gap: 20px;
+        padding-left: 96px;
+      }
+}
+
+@media screen and (max-width: 480px), screen and (max-width: 600px){
+    
+    main {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 34px;
+        margin: 30px 0px;
+        padding: 0px;
+    }
+    header {
+        box-shadow: none;
+        gap: 20px;
+        padding-left: 96px;
+      }
+
+    .product-details {
+        height: auto;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    section {
+        justify-items: center;
+        margin: 0;
+        padding: 0;
+    }
+}
+
