--- a/src/css/your_shelf.css
+++ b/src/css/your_shelf.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
-
+@import url('/src/css/header_footer.css');
 html {
     scroll-behavior: smooth;
 }
@@ -13,8 +13,6 @@ html {
 
 body {
     background-color: #D9D9D9;
-    width: 1440px;
-    height: 3226px;
 }
 
 main {
@@ -212,7 +210,6 @@ section {
     column-gap: 24px;
     row-gap: 35px;
     flex-shrink: 0;
-    /* margin: 123px 92px 94px 92px; */
 }
 
 .expiry_days_title {
@@ -286,4 +283,46 @@ section {
     color: #F90000;
     font-size: 16px;
     font-weight: 600;
+}
+
+/* Media Queries for Responsiveness */
+
+@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+    main {
+        margin: 30px 5px;
+            padding: 0px;
+    }
+}
+
+@media screen and (max-width: 480px), screen and (max-width: 600px){
+    
+    main {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 34px;
+        margin: 0;
+    }
+
+
+    .product-card {
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 12px;
+        justify-items: center;
+    }
+
+    .expiry_days_title {
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 19px;
+        margin-left: 100px;
+    }
+
+    .expiry_days_grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 24px;
+        row-gap: 35px;
+        flex-shrink: 0;
+        justify-items: center;
+    }
 }
