--- a/src/css/your_shelf.css
+++ b/src/css/your_shelf.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
 @import url('/src/css/header_footer.css');
+
 html {
     scroll-behavior: smooth;
 }
@@ -287,15 +288,17 @@ section {
 
 /* Media Queries for Responsiveness */
 
-@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+@media only screen and (max-width: 768px),
+screen and (max-width: 1024px) {
     main {
         margin: 30px 5px;
-            padding: 0px;
+        padding: 0px;
     }
 }
 
-@media screen and (max-width: 480px), screen and (max-width: 600px){
-    
+@media screen and (max-width: 480px),
+screen and (max-width: 600px) {
+
     main {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
