--- a/src/css/header_footer.css
+++ b/src/css/header_footer.css
@@ -1,5 +1,5 @@
 header {
-  color:#EAEAEA;
+  color: #EAEAEA;
   padding-top: 38px;
   padding-bottom: 30px;
   padding-left: 96px;
@@ -8,13 +8,13 @@ header {
   box-shadow: 0px 19px 42px 0px rgba(0, 0, 0, 0.10), 0px 76px 76px 0px rgba(0, 0, 0, 0.09), 0px 170px 102px 0px rgba(0, 0, 0, 0.05), 0px 303px 121px 0px rgba(0, 0, 0, 0.01), 1px 474px 133px 0px rgba(0, 0, 0, 0.00);
 }
 
-.hamburger img{
+.hamburger img {
   width: 32px;
   height: 32px;
   margin-top: 20px;
 }
 
-.logo{
+.logo {
   width: 188px;
   height: 60px;
 }
@@ -27,7 +27,7 @@ header {
   height: 76px;
   width: 516px;
   padding: 26px 50px;
-  border-color: #3a7817; 
+  border-color: #3a7817;
   border-width: 3px;
   border-radius: 10px;
   font-weight: 200;
@@ -38,17 +38,17 @@ header {
 }
 
 .search-icon {
-    width: 68px;
-    height: 76px;
-    background-color: #3a7817;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: 2px;
-    top: 50%;
-    transform: translateY(-50%);
-border-radius: 0px 10px 10px 0px;
+  width: 68px;
+  height: 76px;
+  background-color: #3a7817;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 2px;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 0px 10px 10px 0px;
 }
 
 .links {
@@ -68,7 +68,8 @@ border-radius: 0px 10px 10px 0px;
   font-size: 20px;
   margin: 5px;
 }
-.links{
+
+.links {
   font-weight: 200;
   color: 969696;
   font-size: 20px;
@@ -85,18 +86,18 @@ border-radius: 0px 10px 10px 0px;
   background-color: #00312d;
 }
 
-.social-icons{
+.social-icons {
   padding-top: 34px;
   margin: 8px;
   width: 40px;
   height: 40px;
 }
 
-.footer-nav-links{
+.footer-nav-links {
   padding-top: 44px;
 }
 
-.nav-links{
+.nav-links {
   margin: 0 25px;
   font-size: 16px;
   font-weight: 400px;
@@ -105,20 +106,19 @@ border-radius: 0px 10px 10px 0px;
   text-decoration: none;
 }
 
-.footer-image{
+.footer-image {
   margin-top: 44px;
   padding-bottom: 34.82px;
 }
 
-@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+@media only screen and (max-width: 768px),
+screen and (max-width: 1024px) {
 
   header {
-      box-shadow: none;
-      gap: 20px;
-    }
+    box-shadow: none;
+    gap: 20px;
+  }
 }
 
-@media screen and (max-width: 480px), screen and (max-width: 600px){
-  
-
-}
+@media screen and (max-width: 480px),
+screen and (max-width: 600px) {}
