--- a/src/css/product_upload.css
+++ b/src/css/product_upload.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
 @import url('/src/css/header_footer.css');
+
 html {
     scroll-behavior: smooth;
 }
@@ -20,7 +21,7 @@ body {
 header {
     padding-left: 149px;
     padding-right: 149px;
-  }
+}
 
 main {
     display: grid;
@@ -194,20 +195,23 @@ section {
 
 /* Media Queries for Responsiveness */
 
-@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+@media only screen and (max-width: 768px),
+screen and (max-width: 1024px) {
     main {
         margin: 30px 0px;
-            padding: 0px;
+        padding: 0px;
     }
+
     header {
         box-shadow: none;
         gap: 20px;
         padding-left: 96px;
-      }
+    }
 }
 
-@media screen and (max-width: 480px), screen and (max-width: 600px){
-    
+@media screen and (max-width: 480px),
+screen and (max-width: 600px) {
+
     main {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -215,11 +219,12 @@ section {
         margin: 30px 0px;
         padding: 0px;
     }
+
     header {
         box-shadow: none;
         gap: 20px;
         padding-left: 96px;
-      }
+    }
 
     .product-details {
         height: auto;
@@ -232,4 +237,3 @@ section {
         padding: 0;
     }
 }
-
