--- a/src/css/donor_dashboard.css
+++ b/src/css/donor_dashboard.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+}
+
 body{
     width: 1440px;
     height: 1033px;
@@ -12,12 +23,12 @@ body{
 header{
     border: 2px solid #D1D1D1;
     background-color: #F5F5F5;
-    width: 1178px;
-    height: 100px;
+    width: 1192px;
+    height: 121px;
     display: flex;
-    position: fixed;
+    position: absolute;
     top: 0;
-    right: 0;
+    right:0;
     padding: 16px 10px;
     gap: 315px;
     align-items: center;
@@ -31,14 +42,13 @@ header div{
 
 .header_left{
     display: block;
-    align-items: center;
     padding-left: 50px;
 }
 
 .welcome{
     font-weight: 900;
     font-size: 20px;
-    line-height: 0px;
+    line-height: 24.2px;
     gap: 5px;
     color: #00312D;
 }
@@ -97,7 +107,6 @@ header input{
     position: fixed;
     top: 0;
     left: 0;
-    width: 200px;
     height: 100%;
     padding-top: 38px;
     padding-bottom: 38px;
@@ -155,12 +164,13 @@ padding-top: 10px;
 .container_grid{
     border: 2px solid #D1D1D1;
     background-color: #F5F5F5;
+    border-radius: 20px;
 }
 
 .eclipse{
     position: relative;
     z-index: -10;
-    top: 90px;
+    top: 75px;
     left: 170px;
     }
 
@@ -168,7 +178,7 @@ padding-top: 10px;
     position: absolute;
     width: 154px;
     height: 154px;
-    top: 105px;
+    top: 90px;
     left: 180px;
     z-index: -10;
     
@@ -186,34 +196,32 @@ padding-top: 10px;
 }
 .title{
     display: grid;
-    gap: 0px;
-    line-height: 0px;
-    padding-left: 33px;
-    padding-top: 33px;
-    padding-bottom: 20px;
+    gap: 10px;
+    padding-left: 40px;
+    padding-top: 40px;
+    padding-bottom: 30px;
 }
 
 .personal_information{
     font-weight: 700;
     font-size: 20px;
-    line-height: 0px;
 }
 
 .information_subtitle{
     font-weight: 300;
     font-size: 14px;
-    line-height: 0px;
 }
 
 .the_grid{
     padding-top: 20px;
-    padding-left: 33px;
-    padding-bottom: 40px;
+    padding-left: 40px;
+    padding-bottom: 50px;
     font-weight: 300;
     font-size: 14px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+    row-gap: 60px;
 
 }
 
@@ -234,7 +242,7 @@ padding-top: 10px;
      background: #F5F5F5;
     border: 1px solid #D1D1D1;
     width: 230px;
-    height:20px;
+    height:50px;
     padding: 10px;
 }
 
@@ -252,4 +260,80 @@ font-size: 28px;
 font-weight: 400;
 color: #00312D;
 margin-top: 25px;
+}
+
+
+/* Media Queries for Responsiveness */
+
+@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+    header{
+        left: 300px;
+    }
+}
+
+@media screen and (max-width: 480px), screen and (max-width: 600px){
+    
+    body{
+        width: auto;
+        height: auto;
+    }
+    
+    main {
+        height: auto;
+        width: auto;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 34px;
+        margin: 5px;
+        justify-content: center;
+        align-content: center;
+    }
+    .sidebar{
+        display:none
+    }
+    header{
+        width: auto;
+        height: auto;
+        display: grid;
+        border-radius: 10px;
+        padding: 10px;
+        gap: 0; 
+        left: 0;
+
+    }
+
+    .header_left{
+        padding-left: 0px;
+    }
+
+    header img{
+        display: none;
+    }
+    .header_right{
+        display: none;
+    }
+    .container{
+        width: auto;
+        height: auto;
+        position: relative;
+        left:0;
+        margin-top: 0px;
+
+    }
+    .eclipse{
+        top: 40px;
+        left: 0px;
+        }
+    
+    .profile_image  {
+        top: 55px;
+        left: 10px;
+    }
+    .the_grid{
+        padding-right: 20px;
+        padding-bottom: 50px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+    
+    }
 }
