--- a/src/css/donor_sign_password.css
+++ b/src/css/donor_sign_password.css
@@ -42,7 +42,7 @@ main{
     font-weight: 700;
     letter-spacing: 0em;
     text-align: left;
-    
+    line-height: 20%;
     
 }
 .subtitle{
@@ -50,6 +50,7 @@ font-size: 20px;
 font-weight: 400;
 letter-spacing: 0em;
 text-align: left;
+line-height: 20%;
 }
 .google{
     width: 500px;
@@ -96,7 +97,7 @@ gap: 20px;
 }
 
 .email input{
-width: 500px;
+width: 470px;
 height: 89.16px;
 border-radius: 8.18px;
 border: 1px solid #B3B3B3;
