--- a/src/css/donor_sign_up.css
+++ b/src/css/donor_sign_up.css
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Reenie+Beanie&family=Rubik+Moonrocks&display=swap');
 
+
+html {
+    scroll-behavior: smooth;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
+}
+
+
 body{
     width: 1440px;
     height: 1232px;
@@ -31,7 +44,6 @@ main{
     font-weight: 700;
     letter-spacing: 0em;
     text-align: left;
-    line-height: 20%;
     
 }
 .subtitle{
@@ -39,7 +51,6 @@ font-size: 20px;
 font-weight: 400;
 letter-spacing: 0em;
 text-align: left;
-line-height: 20%;
 }
 .google{
     width: 500px;
@@ -91,7 +102,7 @@ gap: 40px;
 }
 
 .details input{
-width: 470px;
+width: 500px;
 height: 89.16px;
 border-radius: 8.18px;
 border: 1px solid #B3B3B3;
@@ -142,3 +153,31 @@ color: #00312D;
 .sign_up_text{
 color: #226BF7;
 }
+
+/* Media Queries for Responsiveness */
+
+@media only screen and (max-width: 768px), screen and (max-width: 1024px){
+    
+    body{
+        width: auto;
+        height: auto;
+    }
+    main{
+        width: auto;
+        height: auto;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 480px), screen and (max-width: 600px){
+    body{
+        width: auto;
+        height: auto;
+    }
+
+    main{
+        width: auto;
+        height: auto;
+        margin: 0;
+    }
+    }
