--- a/src/css/donor_sign_password.css
+++ b/src/css/donor_sign_password.css
@@ -23,10 +23,10 @@ body{
 
 main{
     width: 674px;
-    height: 809px;
-    margin: 75px 385px;
+    height: 754px;
+    margin: 103px 383px;
     padding: 75px 84px;
-    border-radius: 8.2px;
+    border-radius: 20px;
     background: #FFFFFF;
     border: 0.82px solid #B3B3B3;
     box-shadow: 0px 19px 42px 0px #0000001A, 0px 76px 76px 0px #00000017, 0px 170px 102px 0px #0000000D, 0px 303px 121px 0px #00000003, 1px 474px 133px 0px #00000000; 
@@ -42,7 +42,7 @@ main{
     font-weight: 700;
     letter-spacing: 0em;
     text-align: left;
-    line-height: 20%;
+    line-height: 48px;
     
 }
 .subtitle{
@@ -50,69 +50,87 @@ font-size: 20px;
 font-weight: 400;
 letter-spacing: 0em;
 text-align: left;
-line-height: 20%;
+line-height: 24.2px;
 }
-.google{
-    width: 500px;
+
+
+.email input{
+    width: 500.61px;
+    height: 89.16px;
+    border-radius: 50px;
+    background: #FAFAFA;
+border: 1px solid #B3B3B3;
+padding-left: 80px;
+font-size: 20px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0em;
+text-align: left;
+color: #111111;
+position: relative;
+}
+
+.email input::placeholder{
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0em;
+    color: #111111;
+}
+
+.image_1{
+    position: absolute;
+    left: 505px;
+    top: 340px;
+}
+
+.image_2{
+    position: absolute;
+    right: 580px;
+    top: 337px;
+}
+
+.password_label{
+display: flex;
+font-size: 20px;
+font-weight: 400;
+line-height: 24px;
+gap: 250px;
+margin-bottom: 10px;
+}
+
+.forgot_password{
+color:#72BF01;
+}
+
+.password{
+    position: relative;
+}
+
+.password img{
+    position: absolute;
+    bottom: 40px;
+    right: 30px;
+}
+
+.password input{
+    width: 500.61px;
     height: 89.16px;
     border-radius: 8.18px;
     border: 1px solid #B3B3B3;
-    background: none;
-    display: flex;
-    padding-left: 30px;
-    text-align: left;
-    gap: 30px;
-    align-items: center;
-font-size: 15px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0em;
+    background:rgba(114, 191, 1, 0.3);
+    
+}
+
+.password input::placeholder{
+    font-size: 50px;
+font-weight: 1000;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 color: #111111;
-
-
-
-}
-.google img{
- width: 25px;
- height: 25px;
-}
-.divider{
-    display: flex;
-font-size: 20px;
-font-weight: 400;
-line-height: 24px;
-letter-spacing: 0em;
-align-items: center;
-gap: 40px;
-
-}
-.email{
-    display: grid;
-font-size: 20px;
-font-weight: 400;
-line-height: 24px;
-letter-spacing: 0em;
-text-align: left;
-gap: 20px;
+padding-left: 20px;
 }
 
-.email input{
-width: 470px;
-height: 89.16px;
-border-radius: 8.18px;
-border: 1px solid #B3B3B3;
-padding-left: 30px;
-font-size: 15px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0em;
-text-align: left;
-color: #B3B3B3;
-
-
-}
-
-.continue button{
+.sign_in button{
 margin-top: 30px;
 width: 500px;
 height: 89.16px;
@@ -127,7 +145,7 @@ color: #00312D;
 
 }
 
-.sign_up{
+.another_method{
     display: flex;
     font-size: 15px;
     font-weight: 400;
@@ -135,11 +153,9 @@ color: #00312D;
     letter-spacing: 0em;
     text-align: left;
     gap: 5px;
+    color: #226BF7;
 }
 
-.sign_up_text{
-color: #226BF7;
-}
 
 /* Media Queries for Responsiveness */
 
