--- a/src/css/business_dashboard.css
+++ b/src/css/business_dashboard.css
@@ -13,7 +13,7 @@ html {
 
 body{
     width: 1440px;
-    height: 1033px;
+    height: 1970px;
     background-color: #EAEAEA;
     font-family: Inter;
     font-style: normal;
@@ -110,7 +110,6 @@ header input{
     height: 100%;
     padding-top: 38px;
     padding-bottom: 38px;
-    padding-left: 40px;
     padding-right: 60px;
     align-content: center;
     margin-right: 70px;
@@ -120,6 +119,7 @@ header input{
 .sidebar_logo{
     width: 188px;
     height: 60px;
+    padding-left: 40px;
 }
 
 
@@ -129,7 +129,7 @@ header input{
     margin-top: 50px;
     display: grid;
     gap: 5px;
-
+    padding-left: 40px;
 }
 .links div{
     display: flex;
@@ -153,12 +153,64 @@ header input{
 }
 
 .links div:hover{
-background: #00312D;
+    background: #00312D;
+    border-radius: 5px;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+    
+    }
+
+.links_divider{
+    width: 308px;
+}
+
+.other_links{
+    width: 287px;
+    margin-top: 50px;
+    display: grid;
+    gap: 15px;
+    padding-left: 40px;
+
+}
+.other_links div{
+    gap: 15px;
+    width: 229px;
+    height: 40px;
+    align-content: center;
+}
+
+.other_links img{
+    width: 24px;
+    height:24px;
+}
+
+.other_links a{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    color: #7C7C7C;
+
+    
+}
+
+.other_links div:hover{
+background: rgba(114, 191, 1, 0.3);
+;
 border-radius: 5px;
 border: none;
 padding-left: 10px;
 padding-top: 10px;
 
+}
+
+.sidebar_shop_name{
+    display: grid;
+}
+
+.sidebar_shop_name img{
+    width: 24px;
+    height:24px;
 }
 
 .container_grid{
@@ -167,22 +219,7 @@ padding-top: 10px;
     border-radius: 20px;
 }
 
-.eclipse{
-    position: relative;
-    z-index: -10;
-    top: 75px;
-    left: 170px;
-    }
 
-.profile_image  {
-    position: absolute;
-    width: 154px;
-    height: 154px;
-    top: 90px;
-    left: 180px;
-    z-index: -10;
-    
-}
 
 .container{
     width: 1016px;
@@ -202,12 +239,12 @@ padding-top: 10px;
     padding-bottom: 30px;
 }
 
-.personal_information{
+.first_title{
     font-weight: 700;
     font-size: 20px;
 }
 
-.information_subtitle{
+.subtitle{
     font-weight: 300;
     font-size: 14px;
 }
@@ -320,15 +357,7 @@ margin-top: 25px;
         margin-top: 0px;
 
     }
-    .eclipse{
-        top: 40px;
-        left: 0px;
-        }
     
-    .profile_image  {
-        top: 55px;
-        left: 10px;
-    }
     .the_grid{
         padding-right: 20px;
         padding-bottom: 50px;
