--- a/src/css/business_dashboard.css
+++ b/src/css/business_dashboard.css
@@ -156,9 +156,9 @@ header input{
     background: #00312D;
     border-radius: 5px;
     border: none;
-    padding-left: 10px;
     padding-top: 10px;
-    
+    padding-bottom: 10px;
+    padding-left: 10px;
     }
 
 .links_divider{
@@ -169,15 +169,12 @@ header input{
     width: 287px;
     margin-top: 50px;
     display: grid;
-    gap: 15px;
     padding-left: 40px;
 
 }
 .other_links div{
+    display: flex;
     gap: 15px;
-    width: 229px;
-    height: 40px;
-    align-content: center;
 }
 
 .other_links img{
@@ -193,43 +190,84 @@ header input{
 
     
 }
-
 .other_links div:hover{
 background: rgba(114, 191, 1, 0.3);
-;
 border-radius: 5px;
 border: none;
-padding-left: 10px;
 padding-top: 10px;
+padding-bottom: 10px;
+padding-left: 10px;
 
+font-size: 16px;
+font-weight: 500;
+line-height: 19px;
 }
 
-.sidebar_shop_name{
-    display: grid;
+.other_links a:hover{
+color: #00312D;
 }
+
+.choose_shop{
+   margin-bottom:30px;
+}
+
+
+.shop_web p{
+font-size: 12px;
+font-weight: 300;
+line-height: 15px;
+padding-left: 40px;
+color:rgba(124, 124, 124, 0.7);
+}
+
 
 .sidebar_shop_name img{
     width: 24px;
     height:24px;
 }
 
+#arrow_down_1 { 
+    margin-left: 130px;
+    width: 7.66px;
+    height: 4.83px;
+}
+
+.main_section{
+    display:grid;
+    width: 1016px;
+    height: auto;
+    left: 350px;
+    z-index: -5;
+    margin: 200px 350px;
+    gap:40px;
+}
+
+
+.information_cards{
+    display: grid;
+    gap:20px;
+}
+
+.shop_information{
+    display: grid;
+    width: 212px;
+height: 177px;
+border-radius: 10px;
+border: 1px;
+border: 1px solid #D1D1D1;
+background: #F5F5F5;
+align-content: center;
+padding: 10px;
+}
+.pending{
+display: flex;
+gap 10px
+}
+
 .container_grid{
     border: 2px solid #D1D1D1;
     background-color: #F5F5F5;
     border-radius: 20px;
-}
-
-
-
-.container{
-    width: 1016px;
-    height: 356px;
-    position: absolute;
-    top: 300px;
-    left: 350px;
-    z-index: -5;
-    margin: 90px 0px;
-
 }
 .title{
     display: grid;
@@ -283,11 +321,18 @@ padding-top: 10px;
     padding: 10px;
 }
 
-.save{
+#arrow_down_2 { 
     position: absolute;
-    right: 1px;
-    z-index: -10;
-    width: 189px;
+    top: 1475px;
+    left: 1223px;
+    width: 10px;
+    height: 7px;
+}
+
+.save{
+position: absolute;
+left: 1173px;
+width: 189px;
 height: 70px;
 padding: 18px 62px 18px 62px;
 border-radius: 10px;
