--- a/src/css/donor_dashboard.css
+++ b/src/css/donor_dashboard.css
@@ -11,7 +11,7 @@ html {
     box-sizing: border-box;
 }
 
-body{
+body {
     width: 1440px;
     height: 1033px;
     background-color: #EAEAEA;
@@ -20,7 +20,7 @@ body{
     line-height: normal;
 }
 
-header{
+header {
     border: 2px solid #D1D1D1;
     background-color: #F5F5F5;
     width: 1192px;
@@ -28,24 +28,24 @@ header{
     display: flex;
     position: absolute;
     top: 0;
-    right:0;
+    right: 0;
     padding: 16px 10px;
     gap: 315px;
     align-items: center;
 }
 
-header div{
+header div {
     display: flex;
     align-items: center;
-    
+
 }
 
-.header_left{
+.header_left {
     display: block;
     padding-left: 50px;
 }
 
-.welcome{
+.welcome {
     font-weight: 900;
     font-size: 20px;
     line-height: 24.2px;
@@ -53,32 +53,32 @@ header div{
     color: #00312D;
 }
 
-.date_time{
+.date_time {
     font-weight: 500;
     font-size: 14px;
     gap: 5px;
     color: #7C7C7C;
-    
+
 }
 
-header img{
+header img {
     height: 24px;
     width: 24px;
     align-items: center;
 }
 
-.icons{
+.icons {
     gap: 54px;
     align-items: center;
 }
 
-.header_right{
+.header_right {
     gap: 72px;
     align-items: center;
 }
 
 
-header input{
+header input {
     width: 318px;
     height: 49px;
     padding-left: 70px;
@@ -91,15 +91,15 @@ header input{
     position: relative;
 }
 
-.search_bar img{
+.search_bar img {
     position: absolute;
-  right: 34%;
-  top: 50%;
-  transform: translateY(-50%);
-  z-index: 1;
+    right: 34%;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
 }
 
-.sidebar{
+.sidebar {
     width: 308px;
     height: 1033px;
     border: 2px solid #D1D1D1;
@@ -117,74 +117,83 @@ header input{
 
 }
 
-.sidebar_logo{
+.sidebar_logo {
     width: 188px;
     height: 60px;
 }
 
 
-.links{
+.links {
     width: 287px;
-    height:312px;
+    height: 312px;
     margin-top: 50px;
     display: grid;
     gap: 5px;
 
 }
-.links div{
+
+.links div {
     display: flex;
     gap: 15px;
     width: 229px;
     height: 40px;
 }
 
-.links img{
+.links img {
     width: 24px;
-    height:24px;
+    height: 24px;
 }
 
-.links a{
+.links a {
     text-decoration: none;
     font-weight: 500;
     font-size: 16px;
     color: #7C7C7C;
 
-    
-}
-
-.links div:hover{
-background: #00312D;
-border-radius: 5px;
-border: none;
-padding-left: 10px;
-padding-top: 10px;
 
 }
 
-.container_grid{
+.links div:hover {
+    background: #00312D;
+    border-radius: 5px;
+    border: none;
+    padding-left: 10px;
+    padding-top: 10px;
+
+}
+
+.links a:hover {
+    color: #F5F5F5;
+}
+
+.links img:hover {
+    filter: brightness(0%) sepia(100%) saturate(0%) hue-rotate(269deg) brightness(100%) invert(100%);
+}
+
+.container_grid {
     border: 2px solid #D1D1D1;
     background-color: #F5F5F5;
     border-radius: 20px;
 }
 
-.eclipse{
+.eclipse {
     position: relative;
     z-index: -10;
     top: 75px;
     left: 170px;
-    }
+}
 
-.profile_image  {
+.profile_image {
     position: absolute;
     width: 154px;
     height: 154px;
     top: 90px;
     left: 180px;
     z-index: -10;
-    
+
 }
 
-.container{
+.container {
     width: 1016px;
     height: 356px;
     position: absolute;
@@ -194,7 +203,8 @@ padding-top: 10px;
     margin: 90px 0px;
 
 }
-.title{
+
+.title {
     display: grid;
     gap: 10px;
     padding-left: 40px;
@@ -202,17 +212,17 @@ padding-top: 10px;
     padding-bottom: 30px;
 }
 
-.personal_information{
+.personal_information {
     font-weight: 700;
     font-size: 20px;
 }
 
-.information_subtitle{
+.information_subtitle {
     font-weight: 300;
     font-size: 14px;
 }
 
-.the_grid{
+.the_grid {
     padding-top: 20px;
     padding-left: 40px;
     padding-bottom: 50px;
@@ -225,59 +235,61 @@ padding-top: 10px;
 
 }
 
-.grid{
+.grid {
     display: grid;
     gap: 20px;
-    
+
 }
 
-.grid label{
+.grid label {
 
     font-weight: 600;
     font-size: 14px;
     color: #7C7C7C;
 }
 
-.grid input{
-     background: #F5F5F5;
+.grid input {
+    background: #F5F5F5;
     border: 1px solid #D1D1D1;
     width: 230px;
-    height:50px;
+    height: 50px;
     padding: 10px;
 }
 
-.save{
+.save {
     position: absolute;
     right: 1px;
     z-index: -10;
     width: 189px;
-height: 70px;
-padding: 18px 62px 18px 62px;
-border-radius: 10px;
-background: #BFF202;
-border: none;
-font-size: 28px;
-font-weight: 400;
-color: #00312D;
-margin-top: 25px;
+    height: 70px;
+    padding: 18px 62px 18px 62px;
+    border-radius: 10px;
+    background: #BFF202;
+    border: none;
+    font-size: 28px;
+    font-weight: 400;
+    color: #00312D;
+    margin-top: 25px;
 }
 
 
 /* Media Queries for Responsiveness */
 
-@media only screen and (max-width: 768px), screen and (max-width: 1024px){
-    header{
+@media only screen and (max-width: 768px),
+screen and (max-width: 1024px) {
+    header {
         left: 300px;
     }
 }
 
-@media screen and (max-width: 480px), screen and (max-width: 600px){
-    
-    body{
+@media screen and (max-width: 480px),
+screen and (max-width: 600px) {
+
+    body {
         width: auto;
         height: auto;
     }
-    
+
     main {
         height: auto;
         width: auto;
@@ -288,52 +300,58 @@ margin-top: 25px;
         justify-content: center;
         align-content: center;
     }
-    .sidebar{
-        display:none
+
+    .sidebar {
+        display: none
     }
-    header{
+
+    header {
         width: auto;
         height: auto;
         display: grid;
         border-radius: 10px;
         padding: 10px;
-        gap: 0; 
+        gap: 0;
         left: 0;
 
     }
 
-    .header_left{
+    .header_left {
         padding-left: 0px;
     }
 
-    header img{
+    header img {
         display: none;
     }
-    .header_right{
+
+    .header_right {
         display: none;
     }
-    .container{
+
+    .container {
         width: auto;
         height: auto;
         position: relative;
-        left:0;
+        left: 0;
         margin-top: 0px;
 
     }
-    .eclipse{
+
+    .eclipse {
         top: 40px;
         left: 0px;
-        }
-    
-    .profile_image  {
+    }
+
+    .profile_image {
         top: 55px;
         left: 10px;
     }
-    .the_grid{
+
+    .the_grid {
         padding-right: 20px;
         padding-bottom: 50px;
         grid-template-columns: repeat(1, 1fr);
         gap: 20px;
-    
+
     }
 }
